PR fork with fixed margins and gaps to main (#15)
* Added fixed gaps and margins, deleted space-between

* Added fixed margins

--- a/src/App.scss
+++ b/src/App.scss
@@ -122,6 +122,7 @@ button {
 		color: #DE0288;
 		border: 1px solid #DE0288;
 		gap: 20px;
+		background-color: #fff;
 
 		&:hover {
 			color: #DE028850;
@@ -138,7 +139,14 @@ button {
 	border-radius: 60px 60px 0px 0px;
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
+	gap: 60px;
+
+	overflow-x: hidden;
+	overflow-y: auto;
+
+	&::-webkit-scrollbar {
+		display: none;
+	}
 }
 
 .logo {
@@ -151,6 +159,8 @@ button {
 		width: 100vw;
 		padding: 40px 10px;
 		border-radius: 0;
+
+		gap: 40px;
 	}
 
 	h1 {
