--- a/src/components/pages/PaymentMethod.scss
+++ b/src/components/pages/PaymentMethod.scss
@@ -12,7 +12,7 @@
 			&.summ {
 				background-color: #F4F3F4;
 				justify-content: center;
-				margin-top: 2vh;
+				margin-top: 40px;
 
 				>p {
 					font-weight: 800;
@@ -49,7 +49,7 @@
 		>.banks {
 			height: auto;
 			max-height: 100%;
-			margin-top: 2.5vh;
+			margin-top: 40px;
 			padding: 0;
 			flex-direction: column;
 			border-radius: 0;
@@ -61,10 +61,11 @@
 	.payment-method {
 		.container {
 			div {
-				height: 6.7vh;
+				height: 	7vh;
 				padding: 0 20px;
 
 				&.summ {
+					margin-top: 20px;
 					>p {
 						font-size: 24px;
 					}
@@ -79,6 +80,9 @@
 			}
 
 			>.banks {
+				> div {
+					padding: 5px 20px;
+				}
 				gap: 0.5vh;
 			}
 		}
