--- a/src/components/pages/PaymentRequest.scss
+++ b/src/components/pages/PaymentRequest.scss
@@ -1,11 +1,15 @@
 .payment-request {
+	&.page-container {
+		gap: 0px;
+	}
+
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
 	align-items: center;
 
 	.wrapper {
 		width: 100%;
+		margin-top: 170px;
 	}
 
 	.container {
@@ -21,48 +25,47 @@
 			align-items: center;
 			border-radius: 50vh;
 			padding: 20px 40px;
-
 		}
 
-		>h2 {
+		> h2 {
 			font-weight: 600;
 			line-height: 120%;
 			color: #171717;
 		}
 
-		>h1 {
-			margin-top: 2vh;
+		> h1 {
+			margin-top: 20px;
 			line-height: 120%;
 
-			>span {
+			> span {
 				color: #300060;
 				font-weight: 800;
 			}
 		}
 
-		>p {
-			margin-top: 4vh;
+		> p {
+			margin-top: 40px;
 			font-weight: 600;
 			line-height: 120%;
 		}
 
-		>.timer {
-			margin-top: 9vh;
-			margin-bottom: 7vh;
+		> .timer {
+			margin-top: 84px;
+			margin-bottom: 20px;
 			display: flex;
 			align-items: center;
 			justify-content: center;
 			width: 500px;
 			border-radius: 50vh;
-			background: #F4F3F4;
-			color: #DE0288;
+			background: #f4f3f4;
+			color: #de0288;
 			font-family: 'Mont';
 			font-weight: 800;
 			font-size: 48px;
 		}
 	}
 
-	>.plug {
+	> .plug {
 		height: 80px;
 		width: 100%;
 	}
@@ -70,16 +73,24 @@
 
 @media only screen and (max-width: 768px) {
 	.payment-request {
+		.wrapper {
+			margin-top: 40px;
+		}
+
 		.container {
-			>h1 {
-				margin-top: 5vh;
+			> h1 {
+				margin-top: 40px;
 			}
 
-			>.timer {
+			> p {
+				margin-top: 20px;
+			}
+
+			> .timer {
 				width: 280px;
 				font-size: 36px;
-				margin-top: 5vh;
-				margin-bottom: 2vh;
+				margin-top: 40px;
+				margin-bottom: 40px;
 			}
 		}
 	}
